# smbaipipeline

./: README.md  main.py  pyproject.toml
smbaipipeline/: README.md  pyproject.toml
src/smb_sentiment_analysis/: assets.py
