[project]
name = "smb-sentiment-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dagster>=1.12.7",
    "dagster-duckdb>=0.28.7",
    "dagster-openai>=0.28.7",
    "dagster-webserver>=1.12.7",
    "pandas>=2.3.3",
    "requests>=2.32.5",
]
